@@ -13,7 +13,10 @@
 package org.openhab.binding.mail.internal;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
+
+import javax.activation.PatchedMailcapCommandMap;
+import javax.mail.MessagingException;
 
 import org.apache.commons.mail.DefaultAuthenticator;
 import org.apache.commons.mail.Email;
@@ -35,10 +38,12 @@ import org.slf4j.LoggerFactory;
  * sent to one of the channels.
  *
  * @author Jan N. Klug - Initial contribution
+ * @author Hans-Jörg Merk - Fixed UnsupportedDataTypeException - Originally by Jan N. Klug
  */
 @NonNullByDefault
 public class SMTPHandler extends BaseThingHandler {
     private final Logger logger = LoggerFactory.getLogger(SMTPHandler.class);
+    private final PatchedMailcapCommandMap commandMap = new PatchedMailcapCommandMap();
 
     private @NonNullByDefault({}) SMTPConfig config;
 
@@ -93,11 +98,16 @@ public class SMTPHandler extends BaseThingHandler {
             if (!config.username.isEmpty() && !config.password.isEmpty()) {
                 mail.setAuthenticator(new DefaultAuthenticator(config.username, config.password));
             }
-            mail.send();
-        } catch (EmailException e) {
-            logger.warn("{}", e.getMessage());
-            if (e.getCause() != null) {
-                logger.warn("{}", e.getCause().toString());
+
+            mail.buildMimeMessage();
+            mail.getMimeMessage().getDataHandler().setCommandMap(commandMap);
+            mail.sendMimeMessage();
+        } catch (MessagingException | EmailException e) {
+            Throwable cause = e.getCause();
+            if (cause != null) {
+                logger.warn("{}", cause.toString());
+            } else {
+                logger.warn("{}", e.getMessage());
             }
             return false;
         }
@@ -106,6 +116,6 @@ public class SMTPHandler extends BaseThingHandler {
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singletonList(SendMailActions.class);
+        return List.of(SendMailActions.class);
     }
 }
